# simple-action

./: .env.example  .gitignore  pyproject.toml  readme.md
core/: agent.py  langchain_agent.py  minimal_agent.py  re_act_agent.py
tools/: external_tool.py  internal_tool.py  weather.py
